--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+@keyframes fadeIn {
+  from {
+      opacity: 0;
+  }
+  to {
+      opacity: 1;
+  }
+}
 * {
   margin: 0;
   padding: 0;
@@ -16,21 +24,89 @@ body {
   width: 100%;
   height: 100dvh;
   background: #000;
-  background: url('assets/ahri__hero-background.jpg') no-repeat center;
-  object-fit: cover;
+  background: url('assets/WALLPAPER-1.jpeg') no-repeat center;
+  background-size: cover;
   background-attachment: fixed;
 }
+
+/* Este es el header del encabezado */
 .header {
   width: 100%;
   height: 50px;
   background: #000;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+  padding: 0 2rem;
+  position: sticky;
+  top: 0;
 }
 .header .riot-logo img{
   width: 85px;
 } 
+.header button {
+  width: 150px;
+  height: 35px;
+  text-transform: uppercase;
+  font-family: 'Courier New', Courier, monospace;
+  border-radius: 12px;
+  color: #fff;
+  font-weight: 800;
+  cursor: pointer;
+  border: none;
+  font-size: 15px;
+  margin: 0 1rem;
+}
+.header .login  {
+  background-color:  #0A1428;
+}
+.header .playnow  {
+  background: #20cbe1;
+  color: #000;
+}
+.header button:hover {
+  opacity: .6;
+}
+.header .buttons-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.header .buttons-form span {
+  color: #fff;
+  cursor: pointer;
+  margin: 0 0.25rem;
+}
+#search {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+  background: #4d4c4c;
+  transition: transform 0.5s ease;
+}
+#language:hover {
+  opacity: .6;
+}
+#search:hover {
+  background: #302f2f;
+}
+.search-text {
+  width: 150px;
+  height: 28px;
+  border: none;
+  border-radius: 12px;
+  transform: translateX(-20px);
+  z-index: -1;
+  position: absolute;
+  right: 415px;
+  display: none;
+  padding: 0 5px 0 35px;
+}
+
+
 #navbar {
   display: flex;
   justify-content: space-around;
@@ -39,6 +115,7 @@ body {
   height: 50px;
   background: linear-gradient(180deg, #0A323C, #0A1428);
   position: sticky;
+  top: 0;
 }
 #navbar .list-navbar {
   display: flex;
@@ -67,10 +144,13 @@ li, a {
 .logo img {
   width: 85px;
 }
-
-
 /* Hero section */
 .hero {
   width: 100%;
-  height: 90%;
+  height: 90dvh;
+}
+/* Segunda Section */
+.section {
+  /* width: 100%; */
+  height: 1600px;
 }
