--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 body {
   /* width: 100%; */
@@ -116,6 +117,7 @@ body {
   background: linear-gradient(180deg, #0A323C, #0A1428);
   position: sticky;
   top: 0;
+  box-shadow: 1px 6px 15px #000;
 }
 #navbar .list-navbar {
   display: flex;
@@ -152,5 +154,11 @@ li, a {
 /* Segunda Section */
 .section {
   /* width: 100%; */
-  height: 1600px;
+  height: 750px;
+}
+#inicio {
+  background: #0A1428;
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
 }
