--- a/styles.css
+++ b/styles.css
@@ -168,7 +168,8 @@ li, a {
   position: relative;
 }
 .map {
-  max-width: 800px;
+  /* max-width: 800px; */
+  width: 100%;
   height: 520px;
   background-color: #000;
   position: relative;
@@ -218,7 +219,7 @@ li, a {
   left: 75px;
 }
 .tienda-text{
-  right: 55%;
+  right: 54%;
   top: 100px;
   color: #b71818;
 }
@@ -258,8 +259,8 @@ li, a {
   align-items: center;
   padding: 0 .25rem;
 }
-#monedas {
-  text-align: end;
+ #monedas {
+  /* text-align: end; */
   font-weight: 500;
   font-size: 24px;
   color: #000;
@@ -272,14 +273,83 @@ li, a {
   position: absolute;
   top: 0;
   display: none;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
+  padding: 2rem;
 }
 .bienvenido {
+  color: #fff;
+  opacity: .6;
+  background-color: #fff;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.cards {
+  width: 150px;
+  height: 250px;
+  background-color: #69824b;
+  display: flex;
+  justify-content: start;
+  font-size: 12px;
+  flex-wrap: wrap;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  margin-right: 1rem;
+  padding: 1rem;
+  gap: .5rem;
+  color: #d7d7d7;
+}
+.cards img {
+  width: 80px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+}
+.characteristic {
+  font-size: 12px;
+}
+.goBack {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border: none;
+}
+.goBack:hover {
+  background-color: #cec9c9;
+  scale: 1.05;
+}
+button {
+  cursor: pointer;
+}
+.cards .buttons .toBuy {
+  background-color: green;
+  border: none;
+  width: 120px;
+  border-radius: 10px;
+  color: hsl(0, 14%, 88%);
+  height: 26px;
+  margin-top: .5rem;
+}
+.toBuy:hover {
+  opacity: .6;
+}
+.center-mid {
   font-size: 36px;
   font-weight: 700;
   font-family: 'Courier New', Courier, monospace;
   text-transform: uppercase;
-  color: #fff;
+  color: #000;
+}
+.tiendaDisplay .alcancia {
+  position: block;
 }
