--- a/styles.css
+++ b/styles.css
@@ -171,7 +171,9 @@ li, a {
   /* max-width: 800px; */
   width: 100%;
   height: 520px;
-  background-color: #000;
+  /* background-color: #000; */
+  background: url('assets/background-map.jpg') no-repeat center;
+  background-size: cover;
   position: relative;
 }
 .map img {
@@ -251,7 +253,8 @@ li, a {
   position: absolute;
   width: 140px;
   height: 35px;
-  background-color: #6b8288;
+  background-color: #6b82884e;
+  border: 1px solid #000;
   top: 10px;
   left: 40px;
   display: flex;
@@ -358,6 +361,15 @@ button {
 .maintain-services {
   display: none;
 }
+/* Seccion de Casa */
+#sectionCasa {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
 
 @media screen and (max-width: 768px) {
   #playBground {
