--- a/styles.css
+++ b/styles.css
@@ -318,7 +318,7 @@ li, a {
 .characteristic {
   font-size: 12px;
 }
-.goBack {
+.back {
   position: absolute;
   top: 0;
   left: 0;
@@ -329,7 +329,7 @@ li, a {
   cursor: pointer;
   border: none;
 }
-.goBack:hover {
+.back:hover {
   background-color: #cec9c9;
   scale: 1.05;
 }
@@ -363,12 +363,50 @@ button {
 }
 /* Seccion de Casa */
 #sectionCasa {
-  display: flex;
+  display: none;
   justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 520px;
+  background-color: #8e806c;
+}
+.cards__container {
+  margin-top: 2rem;
+  width: 95%;
+  height: 80%;
+  background-color: #2a6d96ea;
+  display: flex;
+  justify-content: start;
   align-items: center;
 }
 
-
+/* Cartas Creadas */
+.carta-personaje {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  padding: 1rem .5rem;
+  margin: 1rem;
+  width: 160px;
+  height: 300px;
+  background-color: #42a7a5;
+  color: #fff;
+  flex-wrap: wrap;
+  flex-direction: column;
+  gap: .5rem;
+}
+/* Anadir el nombre */
+.nombreCarta {
+  font-size: 24px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: rgb(225, 196, 35);
+}
+/* Anadir imagen */
+.imgCarta {
+  width: 60px;
+  height: 60px;
+}
 
 
 @media screen and (max-width: 768px) {
