--- a/styles.css
+++ b/styles.css
@@ -407,6 +407,16 @@ button {
   width: 60px;
   height: 60px;
 }
+.atributosIconos {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+}
+.contenedorDeAtributos {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 
 @media screen and (max-width: 768px) {
