--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 @keyframes fadeIn {
   from {
-      opacity: 0;
+    opacity: 0;
   }
   to {
-      opacity: 1;
+    opacity: 1;
   }
 }
 * {
@@ -25,7 +25,7 @@ body {
   width: 100%;
   height: 100dvh;
   background: #000;
-  background: url('assets/WALLPAPER-1.jpeg') no-repeat center;
+  background: url("assets/WALLPAPER-1.jpeg") no-repeat center;
   background-size: cover;
   background-attachment: fixed;
 }
@@ -42,15 +42,15 @@ body {
   position: sticky;
   top: 0;
 }
-.header .riot-logo img{
+.header .riot-logo img {
   width: 85px;
   color: #fff;
-} 
+}
 .header button {
   width: 150px;
   height: 35px;
   text-transform: uppercase;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   border-radius: 12px;
   color: #fff;
   font-weight: 800;
@@ -59,15 +59,15 @@ body {
   font-size: 15px;
   margin: 0 1rem;
 }
-.header .login  {
-  background-color:  #0A1428;
+.header .login {
+  background-color: #0a1428;
 }
-.header .playnow  {
+.header .playnow {
   background: #20cbe1;
   color: #000;
 }
 .header button:hover {
-  opacity: .6;
+  opacity: 0.6;
 }
 .header .buttons-form {
   display: flex;
@@ -90,7 +90,7 @@ body {
   transition: transform 0.5s ease;
 }
 #language:hover {
-  opacity: .6;
+  opacity: 0.6;
 }
 #search:hover {
   background: #302f2f;
@@ -108,14 +108,13 @@ body {
   padding: 0 5px 0 35px;
 }
 
-
 #navbar {
   display: flex;
   justify-content: space-around;
   align-items: center;
   width: 100%;
   height: 50px;
-  background: linear-gradient(180deg, #0A323C, #0A1428);
+  background: linear-gradient(180deg, #0a323c, #0a1428);
   position: sticky;
   top: 0;
   box-shadow: 1px 6px 15px #000;
@@ -125,7 +124,8 @@ body {
   align-items: center;
   justify-content: space-around;
 }
-li, a {
+li,
+a {
   text-decoration: none;
   list-style: none;
   color: #fff;
@@ -136,8 +136,8 @@ li, a {
 }
 #navbar .list-navbar li:hover {
   border-bottom: 1px solid #fff;
-  opacity: .6;
-  transition: all .3s;
+  opacity: 0.6;
+  transition: all 0.3s;
 }
 .logo {
   display: flex;
@@ -158,7 +158,7 @@ li, a {
   height: 750px;
 }
 #inicio {
-  background: #0A1428;
+  background: #0a1428;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -172,7 +172,8 @@ li, a {
   align-items: center;
   width: 100%;
   height: 520px;
-  background: url('assets/menu-de-inicio-assets/background-menu.jpg') no-repeat center;
+  background: url("assets/menu-de-inicio-assets/background-menu.jpg") no-repeat
+    center;
   background-size: cover;
   background-attachment: fixed;
 }
@@ -207,7 +208,7 @@ li, a {
 }
 
 /* Personaliza el riel del control deslizante */
- input[type="range"]::-webkit-slider-runnable-track {
+input[type="range"]::-webkit-slider-runnable-track {
   width: 100%;
   height: 10px;
   background: #fff;
@@ -215,7 +216,7 @@ li, a {
 }
 
 /* Personaliza la pelotita del rango (punto de control) */
- input[type="range"]::-webkit-slider-thumb {
+input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
   width: 20px; /* Aumenta el tamaño de la pelotita en 6px */
   height: 20px; /* Aumenta el tamaño de la pelotita en 6px */
@@ -226,7 +227,7 @@ li, a {
 }
 .graphPanel {
   color: #fff;
-  margin: 1rem 0 ;
+  margin: 1rem 0;
 }
 .graphPanel input[type="range"] {
   -webkit-appearance: none;
@@ -255,7 +256,7 @@ li, a {
   right: 0;
   bottom: 0;
 }
-.buttons-section-menu-form button{
+.buttons-section-menu-form button {
   width: 120px;
   height: 28px;
   margin-left: 1rem;
@@ -265,7 +266,7 @@ li, a {
   font-weight: 700;
 }
 .buttons-section-menu-form button:hover {
-  opacity: .6;
+  opacity: 0.6;
 }
 #save-changes {
   background-color: #4ba54b;
@@ -279,10 +280,10 @@ li, a {
   right: 0;
   color: #fff;
   cursor: pointer;
-  margin: .3rem;
+  margin: 0.3rem;
 }
 #quitMenuOption:hover {
-  transition: .3s all;
+  transition: 0.3s all;
   opacity: 0.6;
 }
 .contain-form-menu {
@@ -292,7 +293,7 @@ li, a {
   align-items: center;
   flex-direction: column;
   flex-wrap: wrap;
-  gap: .7rem;
+  gap: 0.7rem;
   margin: 1rem;
   padding: 1rem;
 }
@@ -304,7 +305,7 @@ li, a {
   justify-content: center;
   align-items: center;
   text-transform: uppercase;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   font-weight: bold;
   border: 1px solid #fff;
 }
@@ -315,15 +316,15 @@ li, a {
   scale: 1.05;
 }
 .toPlayMenu {
- background-color: #0A323C;
- color: #32a552;
- height: 58px;
- font-size: 24px;
+  background-color: #0a323c;
+  color: #32a552;
+  height: 58px;
+  font-size: 24px;
 }
 .toOptionsMenu {
   height: 32px;
   font-size: 14px;
-  background-color: #5cca7b;;
+  background-color: #5cca7b;
   color: #0a323c;
 }
 .containImgMenu {
@@ -341,7 +342,7 @@ li, a {
   top: 0;
   right: 0;
   margin: 1rem;
-  padding: .35rem;
+  padding: 0.35rem;
   background-color: #fff;
   user-select: none;
   cursor: pointer;
@@ -381,7 +382,7 @@ li, a {
   border-radius: 5px;
   border: 2px solid #fff;
   padding: 2px;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 .userName-form-submit {
   display: flex;
@@ -397,10 +398,10 @@ li, a {
   align-items: center;
   width: 32px;
   height: 32px;
-  margin: 0 .25rem;
+  margin: 0 0.25rem;
 }
 .userName-form-button:hover {
-  opacity: .6;
+  opacity: 0.6;
 }
 .mensajeToUser {
   display: none;
@@ -412,8 +413,6 @@ li, a {
   height: 520px;
 }
 
-
-
 /* Mostrar nuestro Mapa */
 #playBground {
   margin: 5rem;
@@ -421,10 +420,10 @@ li, a {
 }
 .map {
   /* El display se activara una vez despues de dar click en jugar dentro del menu */
-  display: none;  
+  display: none;
   width: 100%;
   height: 520px;
-  background: url('assets/background-map.jpg') no-repeat center;
+  background: url("assets/background-map.jpg") no-repeat center;
   background-size: cover;
   position: relative;
 }
@@ -440,7 +439,6 @@ li, a {
   font-size: 43px;
   right: 40%;
   top: 5%;
-  
 }
 .tienda {
   width: 170px;
@@ -462,8 +460,8 @@ li, a {
 }
 .button-opt:hover {
   cursor: pointer;
-  transition: .3s;
-  opacity: .65;
+  transition: 0.3s;
+  opacity: 0.65;
 }
 .title-opt {
   color: #fff;
@@ -472,12 +470,12 @@ li, a {
   bottom: 180px;
   left: 75px;
 }
-.tienda-text{
+.tienda-text {
   right: 54%;
   top: 100px;
   color: #b71818;
 }
-.batalla-text{
+.batalla-text {
   bottom: 65%;
   right: 140px;
   font-size: 38px;
@@ -490,7 +488,7 @@ li, a {
   z-index: 100;
   position: absolute;
   top: 0;
-  opacity: .6;
+  opacity: 0.6;
   display: none;
   align-items: center;
   justify-content: center;
@@ -499,7 +497,7 @@ li, a {
 .cargando {
   font-size: 24px;
   font-weight: 700;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 .alcancia {
   position: absolute;
@@ -512,7 +510,7 @@ li, a {
   display: none;
   justify-content: space-between;
   align-items: center;
-  padding: 0 .25rem;
+  padding: 0 0.25rem;
 }
 .alcanciaTienda {
   position: absolute;
@@ -525,9 +523,9 @@ li, a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 .25rem;
+  padding: 0 0.25rem;
 }
- #monedas {
+#monedas {
   /* text-align: end; */
   font-weight: 500;
   font-size: 24px;
@@ -547,7 +545,7 @@ li, a {
 }
 .bienvenido {
   color: #fff;
-  opacity: .6;
+  opacity: 0.6;
   background-color: #fff;
   width: 100%;
   height: 100%;
@@ -571,7 +569,7 @@ li, a {
   align-items: center;
   margin-right: 1rem;
   padding: 1rem;
-  gap: .5rem;
+  gap: 0.5rem;
   color: #d7d7d7;
 }
 .cards img {
@@ -608,10 +606,10 @@ button {
   border-radius: 10px;
   color: hsl(0, 14%, 88%);
   height: 26px;
-  margin-top: .5rem;
+  margin-top: 0.5rem;
 }
 .toBuy:hover {
-  opacity: .6;
+  opacity: 0.6;
 }
 .cards .buttons #comprado {
   background-color: #570707;
@@ -626,7 +624,7 @@ button {
 .center-mid {
   font-size: 36px;
   font-weight: 700;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   text-transform: uppercase;
   color: #000;
 }
@@ -662,7 +660,7 @@ button {
   opacity: 1;
   align-items: center;
   justify-content: center;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 .message {
   display: flex;
@@ -673,10 +671,10 @@ button {
   font-weight: 700;
   font-size: 24px;
   max-width: 400px;
-  padding: .5rem;
+  padding: 0.5rem;
   background: #fff;
 }
-.mensajeDisplayPositive  { 
+.mensajeDisplayPositive {
   color: #15a615;
 }
 .mensajeDisplayNegative {
@@ -709,7 +707,7 @@ button {
   display: flex;
   justify-content: start;
   align-items: center;
-  padding: 1rem .5rem;
+  padding: 1rem 0.5rem;
   margin: 1rem;
   width: 160px;
   height: 350px;
@@ -717,7 +715,7 @@ button {
   color: #fff;
   flex-wrap: wrap;
   flex-direction: column;
-  gap: .25rem;
+  gap: 0.25rem;
 }
 /* Anadir el nombre */
 .nombreCarta {
@@ -753,7 +751,7 @@ button {
   border: 1px solid #000;
 }
 .textoDeAtributo {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   font-size: 12px;
 }
 .botonCasaToBuy {
@@ -766,7 +764,7 @@ button {
 .botonCasaToBuy:hover {
   scale: 1.05;
   background-color: #4ba54b;
-  transition: all .3s;
+  transition: all 0.3s;
 }
 .botonCasaToSell {
   width: 80px;
@@ -777,8 +775,11 @@ button {
 .botonCasaToSell:hover {
   scale: 1.05;
   background-color: #c44646;
-  transition: all .3s;
+  transition: all 0.3s;
 }
+
+/* Section de Batalla */
+
 #sectionBatalla {
   display: none;
   justify-content: center;
@@ -787,7 +788,58 @@ button {
   height: 520px;
   background-color: #c44646;
 }
-
+.lista-de-clasificados {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: column;
+  gap: 0.5rem;
+  width: 200px;
+  height: 200px;
+  border: 5px double #000;
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 1rem;
+}
+.clasificado-text {
+  border-bottom: 1px solid #000;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.mostrarNombreUsuario {
+  font-size: 16x;
+  font-family: "Courier New", Courier, monospace;
+  color: #fff;
+}
+.startToPlay {
+  display: flex;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 220px;
+  height: 65px;
+  border-radius: 12px;
+  margin: 2rem;
+  font-size: 32px;
+  text-transform: uppercase;
+  font-family: "Courier New", Courier, monospace;
+  font-weight: 700;
+  justify-content: center;
+  align-items: center;
+  border: transparent;
+  box-shadow: 3px 3px 15px 1px;
+  background-color: #17677b;
+  color: #fff;
+}
+.startToPlay:hover {
+  background-color: #0a323c;
+  transition: all 0.5s;
+  box-shadow: 3px 3px 15px 6px;
+}
 
 @media screen and (max-width: 768px) {
   #playBground {
@@ -801,11 +853,13 @@ button {
     justify-content: start;
     align-items: center;
   }
-  .login, #search, #language {
+  .login,
+  #search,
+  #language {
     display: none;
   }
   .maintain-services {
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "Courier New", Courier, monospace;
     display: flex;
     width: 80%;
     height: 520px;
@@ -819,7 +873,8 @@ button {
     gap: 1rem;
     padding: 1rem;
   }
-  .maintain-services .main-title span, h2 {
+  .maintain-services .main-title span,
+  h2 {
     font-size: 48px;
   }
 }
