--- a/styles.css
+++ b/styles.css
@@ -861,6 +861,45 @@ button {
   width: 40px;
   height: 30px;
 }
+.contenedor-de-casillas {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  width: 400px;
+  height: 120px;
+  background-color: #c5c3c3;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  margin: 1rem;
+  padding: 1rem;
+}
+.mostrarComoVacio {
+  display: none;
+  font-weight: 700;
+  font-size: 20px;
+  text-transform: capitalize;
+}
+.crearImagenCasilla {
+  width: 100%;
+  height: 100%;
+}
+.crearImagenCasilla:hover {
+  scale: 1.125;
+  transition: .3s ease-in-out all;
+}
+.crearCasillaSelector {
+  width: 80px;
+  height: 80px;
+  border: 2px solid #000;
+  margin-right: 1rem;
+  background-color: #17677b;
+}
+.crearCasillaSelector:hover {
+  background-color: #0a323c;
+  cursor: pointer;
+  transition: .3s ease-in-out all;
+}
 
 @media screen and (max-width: 768px) {
   #playBground {
