--- a/styles.css
+++ b/styles.css
@@ -1163,6 +1163,20 @@ button {
   width: 100%;
   height: 50%;
 }
+.crearCasillaDeHabilidad {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 120px;
+}
+.CasillaDeHabilidad {
+  width: 80px;
+  height: 80px;
+  cursor: no-drop;
+}
 
 @media screen and (max-width: 768px) {
   #playBground {
