--- a/styles.css
+++ b/styles.css
@@ -1149,7 +1149,7 @@ button {
   font-weight: bold;
 }
 .barraDeVidaDelEnemigo {
-  width: 100%;
+  /* width: 100%; */
   height: 50%;
   background-color: red;
 }
